--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+    <script src="p5.min.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
     <script src="nn.js"></script>
-    <script src="snake.js"></script>
-    <script src="ga.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
