--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <script src="nn.js"></script>
+    <script src="cg.js"></script>
+    <script src="ship.js"></script>
+    <script src="ga.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
