--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <script src="cg.js"></script>
-    <script src="ship.js"></script>
-    <script src="ga.js"></script>
+    <script src="utils.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
