I cant solve this!

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <script src="cg.js"></script>
     <script src="utils.js"></script>
     <script src="sketch.js"></script>
+    <div style="position: absolute; top: 620px;">
+      <button onclick="toggleShipUpdates()">Stop</button>
+    </div>
+    <div id="solution" style="position: absolute; top: 630px;">
+    </div>
   </body>
 </html>
